--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,95 @@
+*{
+    box-sizing: border-box;
+    outline: none;
+    text-decoration: none;
+}
+
+body {
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+}
+
 .App {
-  text-align: center;
+    min-height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img {
+    border-radius: 10px;
+    max-width: 250px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.main-title {
+    font-size: 60px;
+    text-align: center;
+    color: #ffa111;
+    margin-top: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.form-search {
+    height: 10vh;
+    max-height: 60px;
+    display: flex;
+    justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
+.input-search {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin: 10px 2px;
+    width: 70%;
+    max-width: 500px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-search {
+    background-color: #ffa111;  
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin: 10px 0;
+    padding: 10px;
+    transition: .3s;
+}
+
+.button-search:hover {
+    cursor: pointer;
+    background-color: #ffb440;  
+}
+
+.recipes-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.recipe {
+    background-color: #ffb440;
+    color: white;
+    width: 90%;
+    max-width: 480px;
+    padding: 10px 30px;
+    border-radius: 5px;
+    margin: 10px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.info{
+    text-align: center;
+}
+
+.loading-button{
+    background-color: #ffa111;  
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin: 5px 0;
+    padding: 10px;
+    transition: .3s
+}
+
+.loading-button:hover {
+    cursor: pointer;
+    background-color: #ffb440;  
 }
